--- a/html_css/parte_I/style.css
+++ b/html_css/parte_I/style.css
@@ -1,51 +1,95 @@
-body {
-}
-
-.titulo-principal {
-  padding-left: 20px;
-}
-
-#banner {
+.banner {
   width: 100%;
 }
 
+.titulo-principal {
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  clear: left;
+}
+
 .principal {
-  background: #cccccc;
-  padding: 30px;
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: 0 auto;
 }
 
-.titulo-centralizado {
-  text-align: center;
+.principal p {
+  margin: 0 0 1em;
 }
 
-p {
-  text-align: center;
+.principal strong {
+  font-weight: bold;
 }
 
-#missao {
-  font-size: 20px;
-}
-
-em strong {
-  color: red;
-}
-
-.beneficios {
-  background: #ffffff;
-  padding: 20px;
-}
-
-ul {
-  display: inline-block;
-  vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
-}
-
-.item {
+.principal em {
   font-style: italic;
 }
 
+.utensilios {
+  width: 120px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+
+.mapa {
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+  text-align: center;
+  margin: 0 0 2em 0;
+}
+
+.mapa-conteudo {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.beneficios {
+  padding: 3em 0;
+  background: #888888;
+}
+
+.conteudo-beneficios {
+  width: 640px;
+  margin: 0 auto;
+}
+
+.lista-beneficios {
+  width: 39%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.itens:before {
+  content: "★";
+}
+
+.itens {
+  line-height: 1.5;
+}
+
+.itens:first-child {
+  font-weight: bold;
+}
+
 .imagem-beneficios {
-  width: 50%;
+  width: 59%;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+  opacity: 0.7;
+  transition: opacity 400ms ease;
+}
+
+.imagem-beneficios:hover {
+  opacity: 1;
+}
+
+.video {
+  width: 560px;
+  margin: 2em auto;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 }
