--- a/html_css/assets/css/global.css
+++ b/html_css/assets/css/global.css
@@ -51,3 +51,17 @@ footer {
   font-size: 13px;
   margin: 20px 0 0;
 }
+
+@media screen and (max-width: 480px) {
+  header {
+    text-align: center;
+  }
+
+  .caixa {
+    width: auto;
+  }
+
+  .caixa nav {
+    position: static;
+  }
+}
