--- a/formacao_fornt_end/flexbox/flexbox-project/assets/css/layout.css
+++ b/formacao_fornt_end/flexbox/flexbox-project/assets/css/layout.css
@@ -1,5 +1,5 @@
 .header {
-  height: 5vh;
+  height: 10vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,10 +8,28 @@
   color: white;
 }
 
+.logo {
+  font-weight: bold;
+}
+
 .menu-list-item {
   width: 35vw;
   display: flex;
   justify-content: space-around;
+}
+
+.flex-container {
+  width: 60vw;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+
+.flex-item {
+  flex: 0 1 20%;
+  color: white;
 }
 
 .card {
@@ -31,6 +49,7 @@
 .legend-image {
   width: 50px;
   font-size: 0.1rem;
+  color: white;
 }
 
 .card-promo {
