--- a/formacao_fornt_end/grid-template/alura-store/assets/css/style.css
+++ b/formacao_fornt_end/grid-template/alura-store/assets/css/style.css
@@ -1,16 +1,35 @@
+:root {
+  --header-height: 3.125rem;
+  --main-height: auto;
+  --footer-height: auto;
+}
+
 .app {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: auto;
+  grid-template-rows:
+    var(--header-height)
+    var(--main-height)
+    var(--footer-height);
   background: #f1f1f1;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
+  grid-area: header;
   border: 1px solid #00cc99;
 }
 
 .main {
+  grid-area: main;
   border: 1px solid #ff8080;
 }
 
 .footer {
+  grid-area: footer;
   border: 1px solid #0099ff;
 }
