--- a/formacao_fornt_end/grid-template/alura-store/assets/css/highlights.css
+++ b/formacao_fornt_end/grid-template/alura-store/assets/css/highlights.css
@@ -4,6 +4,7 @@
   gap: 0.2rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  grid-area: highlights;
 }
 
 .box {
@@ -82,4 +83,8 @@
 
 .categories__highlights___link {
   color: inherit;
+}
+
+.categories__highlights___icone {
+  margin-right: 0.25rem;
 }
