:iphone: feat: layout mobile

--- a/formacao_fornt_end/grid-template/alura-store/assets/css/style.css
+++ b/formacao_fornt_end/grid-template/alura-store/assets/css/style.css
@@ -26,12 +26,20 @@ html {
 .header {
   width: 100%;
   height: var(--header-height);
-  position: fixed;
-  background-color: #f1f1f1;
   display: flex;
   align-items: center;
   padding: 0 2rem;
   grid-area: header;
+  transition: all 0.5s;
+}
+
+.fixed {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.fixed .menu__link {
+  color: #f1f1f1;
 }
 
 .main {
