--- a/formacao_fornt_end/grid-template/alura-store/assets/css/highlights.css
+++ b/formacao_fornt_end/grid-template/alura-store/assets/css/highlights.css
@@ -14,9 +14,6 @@
 }
 
 .main__highlights {
-  grid-column: 1 / 4;
-  grid-row: 1 / 3;
-
   background: url("../img/fortnite.jpg") center / cover no-repeat;
 }
 
@@ -29,49 +26,29 @@
 }
 
 .secondary__highlights:nth-child(2) {
-  grid-column: 4 / 4;
-  grid-row: 1 / 1;
-
   background: url("../img/pubg.jpg") center / cover no-repeat;
 }
 
 .secondary__highlights:nth-child(3) {
-  grid-column: 4 / 4;
-  grid-row: 2 / 2;
-
   background: url("../img/slack.png") center / cover no-repeat;
 }
 
 .secondary__highlights:nth-child(4) {
   background: url("../img/whatsapp.png") center / cover no-repeat;
-
-  grid-column: 4 / 4;
-  grid-row: 3 / 3;
 }
 
 .secondary__highlights:nth-child(5) {
   background: url("../img/cs-go.jpg") center / cover no-repeat;
-
-  grid-column: 3 / 3;
-  grid-row: 3 / 3;
-}
-
-.categories__highlights {
-  grid-column: 1 / 3;
-  grid-row: 3 / 3;
 }
 
 .categories__highlights___list {
-  height: calc(100% - 0.6rem);
+  height: calc(100% - 0.2rem);
   display: flex;
-  row-gap: 0.6rem;
-  column-gap: 0.3rem;
-  justify-content: space-between;
+  gap: 0.2rem;
   flex-wrap: wrap;
 }
 
 .categories__highlights___item {
-  width: calc(50% - 0.3rem);
   padding: 1rem;
   display: flex;
   align-items: center;
