--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
@@ -6,7 +6,7 @@
 }
 
 .plans__title {
-  color: var(--cinza-escuro);
+  color: var(--dark-gray);
   font-weight: 700;
   font-size: 1.5rem;
   font-family: var(--montserrat);
