--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
@@ -12,6 +12,20 @@
   max-width: 350px;
   box-sizing: border-box;
   padding: 2rem 0 2rem 5rem;
+  background-repeat: no-repeat;
+  background-position: top 1.25rem left 2.5rem;
+}
+
+.differentials__item--time {
+  background-image: url(../images/icons/time-icon.png);
+}
+
+.differentials__item--focus {
+  background-image: url(../images/icons/focus-icon.png);
+}
+
+.differentials__item--experts {
+  background-image: url(../images/icons/experts-icon.png);
 }
 
 .differentials__item-title {
