--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/about.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/about.css
@@ -2,7 +2,7 @@
   padding-block: 3rem;
 }
 
-.about__container-title {
+.about__content-title {
   color: var(--dark-gray);
   font-weight: 700;
   font-size: 1.5rem;
@@ -13,14 +13,19 @@
   margin-bottom: 1.25rem;
 }
 
-.about__container-description {
+.about__content-description {
   line-height: normal;
   margin-bottom: 1rem;
 }
 
-.about__container-description--highlight {
+.about__content-description--highlight {
   font-weight: 700;
   color: var(--dark-gray);
+}
+
+.about__content-description--platform {
+  display: inline-block;
+  margin-bottom: 1rem;
 }
 
 .about__platforms {
@@ -28,4 +33,8 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 1rem;
+}
+
+.about__image {
+  display: none;
 }
