--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
@@ -29,10 +29,8 @@
 }
 
 .differentials__item-title {
-  font-weight: 700;
-  font-size: 1.2rem;
-  color: var(--dark-gray);
-  text-transform: uppercase;
+  font-family: inherit;
+  text-align: inherit;
   margin-bottom: 1.5rem;
 }
 
