--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
@@ -1,19 +1,7 @@
 .plans {
-  background-color: var(--cinza-claro);
+  background-color: var(--light-gray);
 
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.plans__title {
-  color: var(--dark-gray);
-  font-weight: 700;
-  font-size: 1.5rem;
-  font-family: var(--montserrat);
-  text-transform: uppercase;
-  text-align: center;
-
-  margin-bottom: 1.25rem;
+  padding-block: 3rem;
 }
 
 .plans__cards {
@@ -22,7 +10,7 @@
   align-items: center;
 }
 
-.card {
+.plans__card {
   display: flex;
   flex-direction: column;
 
@@ -37,7 +25,7 @@
   box-shadow: 0 2px 10px 2px #00000010;
 }
 
-.card__title {
+.plans__card__title {
   font-weight: 700;
   font-size: 1.5rem;
   text-align: center;
@@ -46,14 +34,14 @@
 
   margin-bottom: 0.5rem;
 
-  border-bottom: 1px solid var(--azul-claro);
+  border-bottom: 1px solid var(--light-blue);
 }
 
-.card__content {
+.plans__card__content {
   padding: 0 15%;
 }
 
-.cartao__preco {
+.plans__card__content__price {
   font-weight: 700;
   font-size: 3rem;
   text-align: center;
@@ -62,12 +50,12 @@
   margin-bottom: 1.25rem;
 }
 
-.cartao__texto {
-  color: var(--fonte-cinza);
+.plans__card__content__description {
+  color: var(--font-gray);
   line-height: 28px;
 }
 
-.cartao__botao {
+.plans__card__content__button {
   font-size: 1.2rem;
   font-weight: 700;
 
@@ -81,26 +69,26 @@
   margin-bottom: 1rem;
 }
 
-.cartao--start {
-  color: var(--plans-cartao-start);
+.plans__card--start {
+  color: var(--card-plan-start);
 }
 
-.cartao--ultra {
-  color: var(--plans-cartao-ultra);
+.plans__card--ultra {
+  color: var(--card-plan-ultra);
 }
 
-.cartao--mega {
-  color: var(--plans-cartao-mega);
+.plans__card--mega {
+  color: var(--card-plan-mega);
 }
 
-.cartao__botao--start {
-  border-color: var(--plans-cartao-start);
+.plans__card__content__button--start {
+  border-color: var(--card-plan-start);
 }
 
-.cartao__botao--ultra {
-  border-color: var(--plans-cartao-ultra);
+.plans__card__content__button--ultra {
+  border-color: var(--card-plan-ultra);
 }
 
-.cartao__botao--mega {
-  border-color: var(--plans-cartao-mega);
+.plans__card__content__button--mega {
+  border-color: var(--card-plan-mega);
 }
