:iphone: feat: create tablet layout

--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/institutional.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/institutional.css
@@ -36,3 +36,13 @@
 .institutional__video {
   width: 100vw;
 }
+
+@media screen and (min-width: 768px) {
+  .institutional__contact-email {
+    display: inline;
+  }
+
+  .institutional__video {
+    width: 100%;
+  }
+}
