--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/headline.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/headline.css
@@ -31,3 +31,9 @@
 .headline__button {
   width: 100%;
 }
+
+@media screen and (min-width: 768px) {
+  .headline__description {
+    max-width: 600px;
+  }
+}
