--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/differentials.css
@@ -37,3 +37,13 @@
 .differentials__item-description {
   line-height: normal;
 }
+
+@media screen and (min-width: 1024px) {
+  .differentials {
+    background-color: var(--light-gray);
+  }
+
+  .differentials__list {
+    justify-content: space-around;
+  }
+}
