--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/plans.css
@@ -98,3 +98,15 @@
     max-width: 400px;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .plans__cards {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .plans__card {
+    max-width: 300px;
+  }
+}
