--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/footer.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/footer.css
@@ -27,3 +27,16 @@
   display: inline-block;
   margin: 0 0.5rem 0.7rem;
 }
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    align-items: flex-start;
+  }
+
+  .footer__header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
