--- a/formacao_fornt_end/responsive-layout/apeperia/assets/css/header.css
+++ b/formacao_fornt_end/responsive-layout/apeperia/assets/css/header.css
@@ -34,3 +34,15 @@
   margin-bottom: 1.25rem;
   margin-left: 0.7rem;
 }
+
+@media screen and (min-width: 1024px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    border: none;
+  }
+
+  .header__link {
+    margin-bottom: 0;
+  }
+}
