--- a/formacao_fornt_end/arquitetura-css/assets/css/reset.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/reset.css
@@ -1,12 +1,24 @@
+:root {
+  --main-font: "Roboto";
+  --background-color: #ffffff;
+}
+
 body {
-    font-family: Roboto, sans-serif;
+  font-family: var(--main-font), sans-serif;
+  background-color: var(--background-color);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
-ul, li {
-    padding: 0;
+ul,
+li {
+  padding: 0;
 }
