--- a/formacao_fornt_end/arquitetura-css/assets/css/base.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/base.css
@@ -12,3 +12,9 @@
 .container {
   padding-inline: 1rem;
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-inline: 4rem;
+  }
+}
