--- a/formacao_fornt_end/arquitetura-css/assets/css/header/header.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/header/header.css
@@ -1,6 +1,21 @@
 .header {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__logo {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    display: block;
+  }
 }
