--- a/formacao_fornt_end/arquitetura-css/assets/css/header/menu.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/header/menu.css
@@ -1,8 +1,11 @@
 .nav__menu {
+  width: 100%;
   height: var(--menu-height);
 }
 
 .menu__list {
+  height: 100%;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -21,4 +24,15 @@
 .active {
   font-weight: 700;
   color: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    width: auto;
+  }
+
+  .menu__list {
+    justify-content: initial;
+    gap: 2rem;
+  }
 }
