--- a/formacao_fornt_end/arquitetura-css/assets/css/headline.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/headline.css
@@ -21,3 +21,10 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.75);
   text-align: center;
 }
+
+@media screen and (min-width: 768px) {
+  .headline__title {
+    font-size: 5rem;
+    line-height: 8rem;
+  }
+}
