--- a/formacao_fornt_end/arquitetura-css/assets/css/base.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/base.css
@@ -13,6 +13,10 @@
   padding-inline: 1rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     padding-inline: 4rem;
