--- a/formacao_fornt_end/arquitetura-css/assets/css/reset.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/reset.css
@@ -3,6 +3,10 @@
   --background-color: #ffffff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: var(--main-font), sans-serif;
   background-color: var(--background-color);
