--- a/formacao_fornt_end/arquitetura-css/assets/css/main/recipes.css
+++ b/formacao_fornt_end/arquitetura-css/assets/css/main/recipes.css
@@ -68,3 +68,11 @@
   color: var(--red-700);
   border: 1px solid var(--red-700);
 }
+
+@media screen and (min-width: 768px) {
+  .recipes__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
